[gd_scene load_steps=5 format=2]

[ext_resource path="res://BaseNPC.gd" type="Script" id=1]
[ext_resource path="res://Dialogue NPC/Base/keyE.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 77.026

[node name="BaseNPC" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="keyE" type="Sprite" parent="Area2D"]
visible = false
self_modulate = Color( 1, 1, 1, 0.572549 )
position = Vector2( 16, -54 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -19.0
margin_top = -54.0
margin_right = 21.0
margin_bottom = -40.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
